Bug 30438 – PolicyKit fails to build on AIX

https://bugs.freedesktop.org/show_bug.cgi?id=30438

Signed-off-by: David Zeuthen <davidz@redhat.com>